@@ -1,5 +1,11 @@
 2003-02-28  Kevin Vandersloot <kfv101@psu.edu>
 
+	* load-graph.c: do the configure event even if the graphs aren't displayed. Fixes bug #70101.
+	
+	* callbacks.c: force a graph redraw when tab switched to reduce the delay
+
+2003-02-28  Kevin Vandersloot <kfv101@psu.edu>
+
 	* procdialogs.c: Finish the prefs dialog
 
 2003-02-24  Kevin Vandersloot <kfv101@psu.edu>
